fix: apply theme before react render to prevent flash
Ultraworked with [Sisyphus](https://github.com/code-yeongyu/oh-my-opencode)

Co-authored-by: Sisyphus <clio-agent@sisyphuslabs.ai>

--- a/src/renderer/index.html
+++ b/src/renderer/index.html
@@ -1,12 +1,21 @@
-<!DOCTYPE html>
+<!doctype html>
 <html>
   <head>
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Casemove</title>
-    </head>
+    <script>
+      try {
+        const theme = window.electron?.store?.getThemeSync?.() || 'dark';
+        document.documentElement.classList.add(theme);
+      } catch (e) {
+        console.error('Failed to set theme', e);
+        document.documentElement.classList.add('dark');
+      }
+    </script>
+  </head>
   <body>
     <div id="root"></div>
-    </body>
+  </body>
 </html>
